--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>E-Com</title>
+    <title>Zaya E-Com</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
@@ -61,16 +62,108 @@
         <button class="boxbtn btn btn-primary">See More</button>
       </div>
     </div>
+    <div class="prdsec2">
+      <div class="box2">
+        <h2>Mobiles</h2>
+        <img class="img4"src="mb.png"><br>
+        <button class="boxbtn btn btn-primary">See More</button>
+      </div>
+      <div class="box2">
+        <h2>Laptops</h2>
+        <img class="img5"src="lap.png"><br>
+        <button class="boxbtn btn btn-primary">See More</button>
+      </div>
+      <div class="box2">
+        <h2>Camera</h2>
+        <img class="img6"src="camera.png"><br>
+        <button class="boxbtn btn btn-primary">See More</button>
+      </div>
+    </div>
     <!-- Contact us -->
     <div class="contact-box">
-      <h1>Contact</h1>
-      <form method="get" action="#">
-        <input type="text" placeholder="Name"><br>
-        <input type="email" placeholder="E-mail"><br>
-        <textarea rows="3" cols="50">message...</textarea><br>
-        <button style="margin-top:10px;"type="sumbit" class="btn btn-primary">Sumbit</button>
-      </form>
+      <div class="box3">
+        <h1>Contact</h1>
+        <form method="get" action="#">
+          <input type="text" placeholder="Name"><br>
+          <input type="email" placeholder="E-mail"><br>
+          <textarea rows="3" cols="50">message...</textarea><br>
+          <button style="margin-bottom:20px; margin-top:10px;"type="sumbit" class="btn btn-primary">Sumbit</button>
+        </form>
+      </div>
     </div>
+    <!-- Footer  -->
+    <div class="footer">
+      <div class="row1">
+        <div class="col1">
+          <h5>Mobile Accesories</h5>
+          <ul>
+            <li><a href="#">Charger</a></li>
+            <li><a href="#">Data Cabel</a></li>
+            <li><a href="#">Cases and pouches</a></li>
+            <li><a href="#">Screen protector</a></li>
+            <li><a href="#">Head Phones</a></li>
+            <li><a href="#">OTG</a></li>
+          </ul>
+        </div>
+        <div class="col2">
+          <h5>Laptops</h5>
+          <ul>
+            <li><a href="#">HP</a></li>
+            <li><a href="#">DELL</a></li>
+            <li><a href="#">ASER</a></li>
+            <li><a href="#">AUSU</a></li>
+            <li><a href="#">LENOVO</a></li>
+            <li><a href="#">MAC</a></li>
+          </ul>
+        </div>
+        <div class="col3">
+          <h5>Household Items</h5>
+          <ul>
+            <li><a href="#">Ditergent</a></li>
+            <li><a href="#">Dish Tools</a></li>
+            <li><a href="#">Soaps</a></li>
+            <li><a href="#">Cleaner</a></li>
+  
+          </ul>
+        </div>
+        <div class="col4">
+          <h5>Mobiles</h5>
+          <ul>
+            <li><a href="#">Vivo</a></li>
+            <li><a href="#">Samsung</a></li>
+            <li><a href="#">Oppo</a></li>
+            <li><a href="#">One +</a></li>
+            <li><a href="#">Huwai</a></li>
+            <li><a href="#">Moto</a></li>
+            <li><a href="#">Redmi</a></li>
+            <li><a href="#">Apple</a></li>
+          </ul>
+        </div>
+      </div>
+    
+    <div class="row2">
+      <div class="col1">
+        <h2>Kitchen Eqipments</h2>
+        <ul>
+            <li><a href="#">Mixer</a></li>
+            <li><a href="#">Grinder</a></li>
+            <li><a href="#">Bowl</a></li>
+            <li><a href="#">Plates</a></li>
+            <li><a href="#">Spoons</a></li>
+        </ul>
+      </div>
+      <div class="col2">
+        <h2>Contact Us</h2>
+        <br>
+        <p>Email : care@zaya.com</P>
+        <p>Customer Care : +91 9842042000</p>
+        <br>
+        <h2>Creator</h2>
+        <h2><a href="https://www.instagram.com/ganeshkandhan17"><span class="bi bi-instagram"></span></a><span style="font-size: 25px;"><a style="color:white;" href="https://www.instagram.com/ganeshkandhan17">Instagram</a></span></h2>
+        <h2><a href="https://www.github.com/ganeshkandhan17"><span class="bi bi-github"></span></a><span><a style="color:white;" href="https://www.github.com/ganeshkandhan17">Github</a></span></h2>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
