--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- NAVBAR -->
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <a class="navbar-brand" href="index.html"><image style=" margin:0; padding:0; height:40px; width:27px" src="logo.png"></a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#closethedoor">
                 <span class="navbar-toggler-icon"></span>
