Spelling Mistake Edit

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- product section  -->
     <div class="prdsec">
       <div class="box1">
-        <h2>Glossary</h2>
+        <h2>Grocery</h2>
         <img class="img1"src="gla.png"><br>
         <button class="boxbtn btn btn-primary">See More</button>
       </div>
